<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:baselineAligned="false">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="0.2"
        android:layout_marginLeft="16dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_condensed"
            android:layout_centerVertical="true"
            android:layout_marginTop="16dp"
            android:id="@+id/client_name"
            android:textColor="@color/black"
            android:text="@string/names"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="0.3"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:id="@+id/referral_reasons"
            android:fontFamily="@font/roboto_condensed"
            android:text="@string/referral_reasib"
            android:layout_centerVertical="true"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="0.2"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_condensed"
            android:layout_marginTop="16dp"
            android:id="@+id/ref_date"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:text="@string/referral_date"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="0.2"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_condensed"
            android:layout_marginTop="16dp"
            android:id="@+id/ctc_number"
            android:text="@string/service"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="0.2"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_condensed"
            android:layout_marginTop="16dp"
            android:id="@+id/status"
            android:text="@string/status"
            android:textColor="@color/black"/>

    </RelativeLayout>
    <View
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="4dp"
        android:layout_height="match_parent"
        android:id="@+id/status_color"/>

</LinearLayout>