<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app_ms="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginLeft="8dp"
                android:background="@drawable/border_outline">

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/spin_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:divider="@null"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    app_ms:ms_hintTextSize="14sp"
                    app_ms:ms_multiline="false"
                    app_ms:ms_hint="Status"
                    app_ms:ms_enableFloatingLabel="true"
                    app_ms:ms_enableErrorLabel="false"
                    app_ms:ms_floatingLabelText="Status"
                    app_ms:ms_baseColor="@color/card_light_text"
                    app_ms:ms_highlightColor="@color/card_grid_text"
                    app_ms:ms_errorColor="@color/red_500"
                    app_ms:ms_hintColor="@color/card_grid_text"
                    app_ms:ms_arrowColor="@color/card_light_text"
                    app_ms:ms_arrowSize="12dp"
                    app_ms:ms_floatingLabelColor="@color/card_grid_text"
                    />

            </RelativeLayout>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/border_outline"
                android:id="@+id/client_name_et"
                android:textColor="@color/card_title_text"
                android:drawableRight="@mipmap/ic_portrait"
                android:layout_marginLeft="8dp"
                android:textColorHint="@color/card_grid_tex"
                android:hint="@string/client_name"
                android:fontFamily="@font/google_sans_bold"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/border_outline"
                android:layout_centerVertical="true"
                android:id="@+id/from_date"
                android:textColor="@color/card_title_text"
                android:drawableRight="@mipmap/ic_date_range"
                android:layout_marginLeft="16dp"
                android:hint="@string/from_date"
                android:fontFamily="@font/google_sans_bold"
                android:textColorHint="@color/card_grid_tex"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/border_outline"
                android:layout_marginRight="8dp"
                android:layout_centerVertical="true"
                android:hint="@string/to_date"
                android:id="@+id/to_date"
                android:textColor="@color/card_title_text"
                android:drawableRight="@mipmap/ic_date_range"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/google_sans_bold"
                android:textColorHint="@color/card_grid_tex"
                android:textSize="16sp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="match_parent">

            <TextView
                android:visibility="visible"
                android:id="@+id/attended_flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/status"
                android:fontFamily="@font/google_sans_bold"
                android:textColor="@color/card_title_text"
                android:textSize="14sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/google_sans_bold"
                android:layout_centerVertical="true"
                android:id="@+id/client_name"
                android:textColor="@color/card_title_text"
                android:text="@string/names"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/card_title_text"
                android:id="@+id/referral_reasons"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/referral_reasib"
                android:layout_centerVertical="true"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/google_sans_bold"
                android:id="@+id/ref_date"
                android:layout_centerInParent="true"
                android:textColor="@color/card_title_text"
                android:text="@string/appointment_date"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/google_sans_bold"
                android:id="@+id/ctc_number"
                android:text="@string/ctc_number"
                android:textColor="@color/card_title_text"/>

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/card_separator"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans_bold"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                android:id="@+id/emergency_referrals_title"
                android:textColor="@color/card_grid_text"
                android:text="@string/emergencies"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="70dp"
                android:visibility="gone"
                android:id="@+id/emergency_referrals_container"
                android:background="@color/card_separator">

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:id="@+id/emergency_clients_recycler"
                    android:background="@color/card_separator_third"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google_sans_regular"
                    android:layout_centerInParent="true"
                    android:id="@+id/empty_emergency_referrals"
                    android:textColor="@color/card_grid_tex"
                    android:text="@string/emergency_empty_state"/>


            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans_bold"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                android:id="@+id/other_referrals_title"
                android:textColor="@color/card_grid_text"
                android:text="@string/others_referrals"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/clients_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_separator_third" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
